--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="inputs\Day1TestData.txt" />
-    <None Include="inputs\Day1 %28copy%29.txt" />
+    <None Include="inputs\Day1.txt" />
     <None Include="inputs\Day2TestData.txt" />
     <None Include="inputs\Day2.txt" />
   </ItemGroup>
